# AskDB

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/app/: crud.py  main.py  models.py  utils.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routes/: chatbot.py  login.py  threads.py  users.py
backend/app/chatbot/: chatbot_core.py  memory.py  model.py  prompt.py  propmt.py  tools.py  utils.py
backend/app/core/: config.py  database.py
backend/src/ai_chat_db/: Chatbot.py  api.py  models.py
backend/tests/: generate_database.py  test_graph.py  test_history.py  test_model.py  test_tavily.py  test_tools.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: chat-interface.tsx  thread-sidebar.tsx
frontend/src/components/ui/: button.tsx  scroll-area.tsx  textarea.tsx
frontend/src/lib/: api.ts
src/ai_chat_db/: Chatbot.py  config.py
tests/: test_tavily.py  test_tools.py
