[project]
name = "ai-chat-db"
version = "0.1.0"
description = "AI Chatbot that can answer questions based on database content"
readme = "README.md"
authors = [
    {name = "NourEldin", email = "noureldin.osama.saad@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "faker>=37.1.0",
    "fastapi[all]>=0.115.12",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.1",
    "langgraph>=0.3.20",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.24",
    "tavily-python>=0.5.1",
]

[project.scripts]
ai-chat-db = "ai_chat_db.main:main"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest"
]
lint = [
    "ruff"
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle
    "I",  # isort
    "DTZ",  # flake8-datetimez
    "UP",  # pyupgrade
    "C90",  # mccabe
    "Q",  # flake8-quotes
    "RUF"  # Ruff-specific rules
]
extend-ignore = ["RUF001", "B904", "B008"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
