[project]
name = "ai-chat-db"
version = "0.1.0"
description = "AI Chatbot that can answer questions based on database content"
readme = "README.md"
authors = [
    {name = "NourEldin", email = "noureldin.osama.saad@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "alembic>=1.15.2",
    "fastapi[all]>=0.115.12",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.1",
    "langgraph>=0.3.20",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
    "tavily-python>=0.5.1",
]

[project.scripts]
askdb = "app.main:main"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "Faker"
]
lint = [
    "ruff"
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle
    "I",  # isort
    "DTZ",  # flake8-datetimez
    "UP",  # pyupgrade
    "C90",  # mccabe
    "Q",  # flake8-quotes
    "RUF"  # Ruff-specific rules
]
extend-ignore = ["RUF001", "B904", "B008"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
